# ghostroll

./: .gitignore  BENCHMARK.md  ENHANCED_IMAGES_FEATURE.md  FINAL_TEST_REPORT.md  GALLERY_IMPROVEMENTS.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  PROCESSING_VS_DIRECT_UPLOAD_ANALYSIS.md  PROOF_OF_DEPLOYMENT.md  README.md  WORKFLOW_ANALYSIS.md  analyze_benchmark.py  benchmark.py  benchmark_results.json  generate_test_images.py  generate_test_raw.py  ingest.sh  pyproject.toml  setup.sh  test-eink-local.sh  test-generate-status.py  test-latest-session.sh  test-qr-visibility.py  test_battery_debug.py  test_battery_fixed.py  test_battery_indicator.py  test_battery_visual.py  test_gallery_enhanced.py  test_gallery_toggle.py  test_mount_detection.py  test_optimizations_e2e.py  test_results.json
.github/workflows/: ci.yml
aws-lambda/: DEPLOYMENT.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_AND_OPTIMIZATION.md  create-lambda-direct.sh  deploy-manual.sh  samconfig.toml.example  template.yaml
aws-lambda/.aws-sam/: build.toml
aws-lambda/enhance-images/: .gitignore  .lambdaignore  (+4 more)
docs/: RAW_STORAGE_OPTIONS.md  how-it-works-high-level.md
ghostroll/: __init__.py  __main__.py  aws_boto3.py  aws_cli.py  cli.py  config.py  db.py  debug_session.py  doctor.py  exif_utils.py  gallery.py  hashing.py  image_processing.py  log_uploader.py  logging_utils.py  media.py  mount_check.py  pipeline.py  qr.py  status.py  volume_watch.py  watchdog_watcher.py  web.py
ghostroll.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pi/: README.md  ghostroll.env.default  ghostroll.env.example
tests/: test_aws_cli.py  test_cli.py  test_config.py  test_db.py  test_doctor.py  test_exif_utils.py  test_gallery.py  test_hashing.py  test_image_processing.py  test_logging_utils.py  test_media.py  test_pipeline_smoke.py  test_qr.py  test_raw_upload.py  test_status.py  test_volume_watch.py
(+34 files in other folders)
