[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostroll"
version = "0.1.0"
description = "GhostRoll — SD Card → Processing Pipeline → S3 Share Link"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "qrcode>=7.4.2",
  "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ghostroll = "ghostroll.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostroll*"]


