[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostroll"
version = "0.7.0"
description = "GhostRoll — SD Card → Processing Pipeline → S3 Share Link"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "qrcode>=7.4.2",
  "watchdog>=3.0.0",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
ghostroll = "ghostroll.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostroll*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["aws-lambda", ".venv", "venv", "__pycache__", ".git"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]


